DevOCL/src/objects/CLQ_Domain_Rule__c.object
<CustomObject>
    <description>Junction object between Rules and Domain</description>
    <fields>
        <fullName>CLQ_Applicable_To__c</fullName>
        <label>Applicable To</label>
        <picklist>
            <picklistValues>
                <fullName>Alleged Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Care Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Camp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Home Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of State Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Age Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type A Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type B Home</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Domain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Domain</label>
        <referenceTo>CLQ_Domain__c</referenceTo>
        <relationshipLabel>Domain Rules</relationshipLabel>
        <relationshipName>Domain_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Rule_Effective_Date__c</fullName>
        <label>Rule Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Rule_Expiration_Date__c</fullName>
        <label>Rule Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rule</label>
        <referenceTo>CLQ_Rule__c</referenceTo>
        <relationshipLabel>Domain Rules</relationshipLabel>
        <relationshipName>Domain_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Domain Rule</label>
    <nameField>
        <displayFormat>DR#-{000000}</displayFormat>
        <label>Domain Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Domain Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>